# minibwa

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  NEWS.md  README.md  align.c  base-algo.c  bseq.c  bseq.h  bwt.c  bwt.h  cs.c  example.c  fastmap.c  format.c  hl.h  index.c  kommon.c  kommon.h  ksw2.h  ksw2_dispatch.c  ksw2_extd2_avx2.c  ksw2_extz2_sse.c  ksw2_ll_sse.c  l2bit.c  lchain.c  main.c  map-algo.c  map-main.c  mbpriv.h  meth.c  meth.h  minibwa.1  minibwa.h  options.c  pe.c  s2n-lite.h  (+3 more)
.github/workflows/: build.yml
api-test/: Makefile  ex-batch.c  ex-meth-cmap.c  ex-sgl.c
docs/paper/: Makefile  perf.tsv  plot-perf.gp
examples/: Makefile  ex-batch.c  ex-one.c
src/: bwt.c  index.c
test/: run-tests.sh  test-api.sh  test-bisulfite.sh  test-index-routines.sh  test-meth-align.sh  test-meth-tags.sh  test-utils.sh  test_invariant_ex-batch.c  test_invariant_ksw2_extz2_sse.c
tex/: minibwa.bib  minibwa.tex  perf.tsv  plot-perf.gp
